css and something

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -60,7 +60,7 @@ http {
     ##
     # Uncomment it if you installed nginx-passenger
     ##
-    
+
     #passenger_root /usr;
     #passenger_ruby /usr/bin/ruby;
 
@@ -78,7 +78,7 @@ http {
 
         keepalive_timeout 5;
 
-        access_log  /var/log/nginx/timeline.access.log;
+        access_log  /home/project/MyTimeline/nginx.access.log;
 
         # path for static files
         root /home/project/MyTimeline/timeline;
@@ -113,17 +113,17 @@ http {
 #mail {
 #   # See sample authentication script at:
 #   # http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
+#
 #   # auth_http localhost/auth.php;
 #   # pop3_capabilities "TOP" "USER";
 #   # imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
+#
 #   server {
 #       listen     localhost:110;
 #       protocol   pop3;
 #       proxy      on;
 #   }
-# 
+#
 #   server {
 #       listen     localhost:143;
 #       protocol   imap;
