--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -1,8 +1,8 @@
-feedparser==5.2.1
-Jinja2==2.8
-oauth2py==1.1.4
-PyMySQL==0.7.11
-python-dateutil==2.6.0
-requests==2.2.1
-requests-oauthlib==0.7.0
-tornado==4.4.2
+feedparser>=5.2.1
+Jinja2>=2.8
+oauth2py>=1.1.4
+PyMySQL>=0.7.11
+python-dateutil>=2.6.0
+requests>=2.2.1
+requests-oauthlib>=0.7.0
+tornado>=4.4.2
