set xheaders=True

--- a/deploy/supervisor.conf
+++ b/deploy/supervisor.conf
@@ -2,7 +2,7 @@
 command=python /home/project/timeline.me/timeline.py
 stdout_logfile_maxbytes=10MB
 stderr_logfile_maxbytes=10MB
-stdout_logfile=/home/project/timeline.me/timeline.log
+stdout_logfile=/home/project/timeline.me/timeline.error.log
 stderr_logfile=/home/project/timeline.me/timeline.log
 redirect_stderr=true
 autostart=true
