--- a/deploy/timeline.conf
+++ b/deploy/timeline.conf
@@ -10,7 +10,9 @@ server {
         proxy_set_header Host $http_host;
         proxy_redirect off;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header REMOTE_ADDR $remote_addr;
         proxy_set_header X-Scheme $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass http://frontends;
     }
 }
