--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '2.1'
 
 services:
   mysql:
-    image: mysql:latest
+    image: mysql:5.7
     container_name: timeline_db
     ports:
         - 3306:3306
-    command: --init-file deploy/init.sql
+    command: --default-authentication-plugin=mysql_native_password --init-file="/deploy/init.sql"
     volumes:
-      - /data/timeline_db:/var/lib/mysql
-      - /deploy/init.sql:/deploy/init.sql
+      - /project/data/timeline_db:/var/lib/mysql
+      - /project/deploy/init.sql:/deploy/init.sql
     environment:
         MYSQL_ROOT_PASSWORD: {MYSQL_ROOT_PASSWORD}
         MYSQL_DATABASE: timeline
